# Sentinel-Real-Time-Financial-Fraud-Detection-Engine-with-Explainable-AI-Drift-Monitoring

./: .dockerignore  .gitignore  Dockerfile.gateway  Dockerfile.triton  README.md  README_ARCH.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: smoke-test.yml
scripts/: generate_ci_model.py  generate_test_payload.py
src/: triton_client.py
tests/: conftest.py  fake_triton.py  test_pipeline.py
